[package]
name = "spacedust"
version = "0.1.0"
authors = ["James Clague <james.clague@brct.io>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
keywords = ["spacetraders"]
categories = ["api-bindings"]
description = "An API wrapper for https://spacetrader.io V2"
homepage = "https://github.com/brct-james/spacedustrs"
repository = "https://github.com/brct-james/spacedustrs"
documentation = "https://docs.rs/spacedust"
exclude = [
    "tests",
]

[lib]
name = "spacedust"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = [ "full", "time" ] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = [ "serde", "alloc" ] }
log = "0.4.14"

[dev-dependencies]
env_logger = "*"