[package]
name = "spacedust"
version = "1.0.1"
authors = ["James Clague <james.clague@brct.io>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
keywords = ["spacetraders"]
categories = ["api-bindings"]
description = "An API wrapper for spacetraders.io V2"
homepage = "https://github.com/brct-james/spacedustrs"
repository = "https://github.com/brct-james/spacedustrs"
documentation = "https://docs.rs/spacedust"
exclude = [
    "tests",
    "spacetraders-api-docs",
    "client-dist"
]

[lib]
name = "spacedust"
path = "src/lib.rs"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
reqwest-middleware = "0.1.6"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]