[package]
name = "spacedust"
version = "1.0.7"
authors = ["James Clague <james.clague@brct.io>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
keywords = ["spacetraders"]
categories = ["api-bindings"]
description = "An API wrapper for spacetraders.io V2"
homepage = "https://github.com/spacetraders-rs/spacedustrs"
repository = "https://github.com/spacetraders-rs/spacedustrs"
documentation = "https://docs.rs/spacedust"
exclude = [
    "tests",
    "spacetraders-api-docs",
    "client-dist"
]

[lib]
name = "spacedust"
path = "src/lib.rs"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
reqwest-middleware = "0.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]